style.css
* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  background-color: #363636;
  color: black;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

button {
  margin: 0;
  padding: 0;
  border: 0;
  background-color: white;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  -webkit-appearance: button;
}

button:hover {
  color: black;
  cursor: pointer;
}

button,
button:active,
button:focus,
select:focus {
  outline: none;
}

a:focus-visible,
button:focus-visible,
select:focus-visible {
  outline: 2px solid rgba(0,0,0,.9);
}

.map {
  will-change: contents;
}

.map img {
  -webkit-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.map > img {
  opacity: .001;
  width: 8000px;
  height: 8000px;
}

.map,
.viewer-container {
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100vw !important;
  height: 100vh !important;
}

.viewer-container img {
  aspect-ratio: 1 / 1;
  opacity: 0;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.map-switcher {
  display: flex;
  position: absolute;
  z-index: 2;
  top: 16px;
  left: 50%;
  flex-grow: 1;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  width: 300px;
  transform: translateX(-50%);
  row-gap: 8px;
}

@media screen and (min-width: 768px) {
  .map-switcher {
    flex-wrap: nowrap;
    column-gap: 8px;
    transition: transform .2s ease;
  }

  .map-switcher_right {
    right: 0;
    left: auto;
    transform: translate3d(-28px, 0, 0);
  }
}

.map-select {
  display: inline-block;
  width: 300px;
  height: 50px;
  padding-right: 34px;
  padding-left: 8px;
  overflow: hidden;
  transition: background-color .15s ease;
  border: 0;
  border-radius: 8px;
  background-color: white;
  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3C!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 330 330' style='enable-background:new 0 0 330 330;' xml:space='preserve'%3E%3Cpath id='XMLID_225_' d='M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393 c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393 s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z'/%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
  background-repeat: no-repeat;
  background-position: calc(100% - 13px) calc(50% + 1px);
  background-size: 13px;
  box-shadow: 0 2px rgba(0, 0, 0, .2), 0 2px 3px 1px rgba(0, 0, 0, .3);
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 13px;
  text-overflow: ellipsis;
  white-space: nowrap;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.map-select:hover {
  background-color: white;
}

@media screen and (min-width: 1200px) {
  .map-select {
    padding-top: 4px;
    padding-right: 40px;
    padding-bottom: 4px;
    padding-left: 16px;
    font-size: 14px;
  }
}

.map-toggle {
  display: flex;
  top: 0;
  left: 50%;
  flex-grow: 1;
  max-width: 300px;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  column-gap: 5px;
  border-radius: 10px;
  background-color: rgba(220, 220, 220, .95);
  box-shadow: 0 2px 3px 1px rgba(0, 0, 0, .3);
}

.map-toggle__button {
  flex-grow: 1;
  height: 40px;
  padding-right: 16px;
  padding-bottom: 0;
  padding-left: 16px;
  transition: background-color .15s ease;
  border: 0;
  border-bottom: 1px solid transparent;
  border-radius: 8px;
  background-color: rgba(255, 255, 255, .0);
  font-size: 13px;
  text-align: center;
  white-space: nowrap;
}

@media screen and (min-width: 991px) {
  .map-toggle__button {
    font-size: 14px;
  }
}

.map-toggle__button:hover {
  border-bottom: 1px solid rgba(0, 0, 0, .15);
  background-color: rgba(255, 255, 255, .7);
}

.map-toggle__button:active,
.map-toggle__button_active {
  border-bottom: 1px solid rgba(0, 0, 0, .25);
  background-color: rgba(255, 255, 255, 1);
  color: black;
  cursor: auto;
}

.legend {
  position: absolute;
  z-index: 3;
  top: 0;
  left: 0;
  width: 37vw;
  height: 100%;
  transform: translateX(calc(-100% - 5px));
  transition: transform .15s ease;
}

.legend__menu {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 0 8px 0 0;
  overflow: auto;
  background: white;
  box-shadow: 1px 0 15px rgba(0,0,0.05);
}

.legend__menu img {
  display: none;
  max-width: 100%;
}

.legend__button {
  display: inline-block;
  position: absolute;
  z-index: 1;
  top: 50%;
  right: -86px;
  padding: 16px 32px;
  transform: translateY(-50%) rotate(-90deg);
  transition: background-color .175s ease;
  border: 0;
  border-radius: 0 0 8px 8px;
  background-color: rgba(255, 255, 255, .95);
  box-shadow: -2px 2px 2px rgba(0, 0, 0, .45);
  font-size: 16px;
}

.legend__button:hover {
  background-color: rgba(255, 255, 255, 1);
}

.legend_open {
  width: calc(100vw - 50px);
  transform: translateX(0);
}

.legend_open img {
  display: block;
}

.legend_open .legend__button {
  background-color: white;
}

@media screen and (min-width: 1200px) {
  .legend_open {
    width: 37vw;
  }
}

.zoom {
  display: flex;
  position: absolute;
  z-index: 2;
  top: 50%;
  right: 10px;
  flex-direction: column;
  transform: translate(0, -50%);
  border-radius: 50px;
  background: rgba(255, 255, 255, .95);
  box-shadow: 0 2px 3px 1px rgba(0, 0, 0, .3);
}

.zoom__button {
  width: 45px;
  height: 48px;
  transition: background-color .15s ease;
  background: rgba(255,255,255,.45);
  color: rgba(0, 0, 0, .75);
  font-size: 32px;
}

@media screen and (min-width: 991px) {
  .zoom {
    right: 28px;
  }
}

.zoom__button:hover{
  background: rgba(0, 0, 0, .025);
}

.zoom__button:active {
  background: rgba(0, 0, 0, .05);
}

.zoom__button_plus {
  padding-bottom: 2px;
  border-bottom: 1px solid rgba(0, 0, 0, .2);
  border-radius: 50px 50px 0 0;
}

.zoom__button_minus {
  padding-top: 0;
  padding-bottom: 3px;
  border-radius: 0 0 50px 50px;
}

.contact-button {
  display: inline-block;
  position: absolute;
  z-index: 2;
  bottom: 38px;
  left: 50%;
  width: 300px;
  padding: 10px 28px;
  transform: translateX(-50%);
  transition: background-color .15s ease;
  border: 0;
  border-radius: 8px;
  background-color: rgba(255, 255, 255, .9);
  box-shadow: 0 4px 7px rgba(0, 0, 0, .4);
  color: #1a1a1a;
  font-size: 16px;
  text-align: center;
  text-decoration: none;
  white-space: nowrap;
}

.contact-button:hover {
  background-color: rgba(255, 255, 255, 1);
}

@media screen and (min-width: 991px) {
  .contact-button {
    right: 28px;
    left: auto;
    width: auto;
    transform: none;
  }
}

.about-link {
  position: absolute;
  z-index: 2;
  bottom: 10px;
  left: 50%;
  width: 300px;
  padding: 2px 11px;
  transform: translate(-50%);
  border-radius: 4px;
  background: rgba(0, 0, 0, .14);
  color: white;
  font-size: 13px;
  text-align: center;
  white-space: nowrap;
}

@media screen and (min-width: 991px) {
  .about-link {
    right: 28px;
    left: auto;
    width: auto;
    transform: none;
  }
}

.loader {
  display: inline-block;
  position: absolute;
  z-index: 1;
  top: 50%;
  left: 50%;
  width: 80px;
  height: 80px;
  transform: translate(-50%, -50%);
}

.loader div {
  position: absolute;
  top: 33px;
  width: 13px;
  height: 13px;
  animation-timing-function: cubic-bezier(0, 1, 1, 0);
  border-radius: 50%;
  background: #fff;
}

.loader div:nth-child(1) {
  left: 8px;
  animation: loader1 .6s infinite;
}

.loader div:nth-child(2) {
  left: 8px;
  animation: loader2 .6s infinite;
}

.loader div:nth-child(3) {
  left: 32px;
  animation: loader2 .6s infinite;
}

.loader div:nth-child(4) {
  left: 56px;
  animation: loader3 .6s infinite;
}

@keyframes loader1 {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes loader3 {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(0);
  }
}
@keyframes loader2 {
  0% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(28px, 0);
  }
}

@supports (backdrop-filter: blur(5px)) {
  .map-toggle {
    border: 1px solid rgba(255,255,255,.1);
    background-color: rgba(240, 240, 240, .8);
    backdrop-filter: blur(8px);
  }

  .map-select {
    border: 1px solid rgba(255,255,255,.8);
    background-color: rgba(255,255,255,.9);
    backdrop-filter: blur(8px);
  }

  .about-link {
    border: 1px solid rgba(0,0,0,.05);
    background-color: rgba(0,0,0,.2);
    backdrop-filter: blur(8px);
  }
}

